# api/openapi.yaml
@@ -7,7 +7,7 @@ info:
   license:
     name: GPL-3.0 license
     url: https://github.com/IS-T51/animati/blob/main/LICENSE
-  version: 0.2.0
+  version: 0.2.1
 servers:
 - url: https://api.animati.app/
 - url: http://localhost:8080/
@@ -164,9 +164,15 @@ paths:
           content:
             application/json:
               schema:
+                $ref: '#/components/schemas/Risposta'
+        "500":
+          description: Errore interno del server
+          content:
+            application/json:
+              schema:
                 $ref: '#/components/schemas/Errore'
       x-swagger-router-controller: Utente
-  /google/{codiceAutorizzativo}:
+  /google:
     get:
       tags:
       - utente
@@ -174,12 +180,12 @@ paths:
       description: Verifica il codice autorizzativo fornito da Google e crea un utente
       operationId: loginGoogle
       parameters:
-      - name: codiceAutorizzativo
-        in: path
+      - name: code
+        in: query
         description: Il codice autorizzativo fornito da Google
         required: true
-        style: simple
-        explode: false
+        style: form
+        explode: true
         schema:
           type: string
       responses:
@@ -188,7 +194,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Utente'
+                $ref: '#/components/schemas/Token'
         "400":
           description: Richiesta non valida
           content:
@@ -1218,8 +1224,8 @@ components:
           format: int64
       example:
         numeroSegnalazioni: 0
-        ultimaModifica: 2000-01-23T04:56:07.000+00:00
-        mediaValutazioni: 3.61607674925191080461672754609026014804840087890625
+        ultimaModifica: 2000-01-23T04:56:07.000Z
+        mediaValutazioni: 3.616076749251911
         banner: http://example.com/aeiou
         id: id
         collegamenti:
@@ -1361,7 +1367,7 @@ components:
         attività:
         - attività
         - attività
-        ultimaModifica: 2000-01-23T04:56:07.000+00:00
+        ultimaModifica: 2000-01-23T04:56:07.000Z
         nome: nome
         id: id
         autore: autore
@@ -1449,12 +1455,22 @@ components:
           - 200
           - 201
           - 204
+          - 302
         messaggio:
           type: string
           readOnly: true
       example:
-        messaggio: messaggio
-        codice: 0
+        messaggio: ok
+        codice: 200
+    Token:
+      allOf:
+      - $ref: '#/components/schemas/Risposta'
+      - type: object
+        properties:
+          token:
+            type: string
+            readOnly: true
+            example: "{\"token\":\"token\"}"
   securitySchemes:
     autenticato:
       type: http
